Remove the "correct" hint from feedback questionnaires
Do not show the "correct" text in the submission feedback HTML
of feedback questionnaires (that have "feedback: true";
they are used to collect course feedback from the students).

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -165,7 +165,7 @@
 			<!-- End of a text-field -->
 			{% endif %}
 
-		{% if result.accepted and not result.form.enrollment_exercise and not result.model_answer and not field.field.row_label or field.field.close_table %}
+		{% if result.accepted and not result.form.enrollment_exercise and not exercise.feedback and not result.model_answer and not field.field.row_label or field.field.close_table %}
 			<!-- Question feedback -->
 			<div>
 				{% if field.field.type == "checkbox" and field.field.checkbox_feedback %}
