--- a/access/templates/access/graded_form_feedback.html
+++ b/access/templates/access/graded_form_feedback.html
@@ -30,13 +30,15 @@
 			</p>
 		{% endfor %}
 	{% endif %}
-	<p class="question-feedback">
-		{% if field.answer_correct %}
-			<i class="quiz1-icon-correct"  aria-hidden="true"></i>
-			<span class="feedback-text">{% trans "Correct!" %}</span>
-		{% else %}
-			<i class="quiz1-icon-incorrect" aria-hidden="true"></i>
-			<span class="feedback-text">{% trans "Incorrect" %}</span>
-		{% endif %}
-	</p>
+	{% if not result.model_answer %}
+		<p class="question-feedback">
+			{% if field.answer_correct %}
+				<i class="quiz1-icon-correct"  aria-hidden="true"></i>
+				<span class="feedback-text">{% trans "Correct!" %}</span>
+			{% else %}
+				<i class="quiz1-icon-incorrect" aria-hidden="true"></i>
+				<span class="feedback-text">{% trans "Incorrect" %}</span>
+			{% endif %}
+		</p>
+	{% endif %}
 {% endif %}
