--- a/access/templates/access/graded_form_feedback.html
+++ b/access/templates/access/graded_form_feedback.html
@@ -1,44 +1,42 @@
 {% load i18n %}
 
-
-{% if result.form.reveal_correct %}
-{# if "reveal-model-at-max-submissions" is set to true, the correct answers are revealed #}
-	<p data-aplus-once="yes" class="question-feedback">
+{% if hints %}
+	{% for hint in hints  %}
+		<p class="question-hint hint-general">
+			{{ hint|safe }}
+		</p>
+	{% endfor %}
+{% endif %}
+{% if not result.model_answer %}
+	<p class="question-feedback">
 		{% if field.answer_correct %}
-			<i class="quiz1-icon-correct"  aria-hidden="true"></i>
+			<i class="quiz1-icon-correct" aria-hidden="true"></i>
 			<span class="feedback-text">{% trans "Correct!" %}</span>
 		{% else %}
 			<i class="quiz1-icon-incorrect" aria-hidden="true"></i>
-			<span>
-				{% if field.type == "checkbox" or field.type == "radio" %}
-					{% trans "Incorrect. You can check the correct options above." %}
-					{% if field.neutral %}
-						{% trans "Neutral options which do not affect grading are marked with a question mark." %}
-					{% endif %}
+			<span class="feedback-text">
+				{% if not result.form.reveal_correct %}
+					{% trans "Incorrect" %}
 				{% else %}
-					{% trans "Incorrect. The correct answer is" %}: {{ field.correct }}
+					{# if "reveal-model-at-max-submissions" is set to true, the correct answers are revealed #}
+					{% if field.type == "checkbox" or field.type == "radio" %}
+						{% trans "Incorrect." %}
+						<span data-aplus-once="yes">
+							{% trans "You can check the correct options above." %}
+							{% if field.neutral %}
+								{% trans "Neutral options which do not affect grading are marked with a question mark." %}
+							{% endif %}
+						</span>
+					{% else %}
+						{% trans "Incorrect." %}
+						<span data-aplus-once="yes">
+							{% blocktrans with correct=field.correct trimmed %}
+								The correct answer is: {{ correct }}
+							{% endblocktrans %}
+						</span>
+					{% endif %}
 				{% endif %}
 			</span>
 		{% endif %}
 	</p>
-{% else %}
-{# if "reveal-model-at-max-submissions" is not set, possible hints and default messages are shown instead #}
-	{% if hints %}
-		{% for hint in hints  %}
-			<p class="question-hint hint-general">
-				{{ hint|safe }}
-			</p>
-		{% endfor %}
-	{% endif %}
-	{% if not result.model_answer %}
-		<p class="question-feedback">
-			{% if field.answer_correct %}
-				<i class="quiz1-icon-correct"  aria-hidden="true"></i>
-				<span class="feedback-text">{% trans "Correct!" %}</span>
-			{% else %}
-				<i class="quiz1-icon-incorrect" aria-hidden="true"></i>
-				<span class="feedback-text">{% trans "Incorrect" %}</span>
-			{% endif %}
-		</p>
-	{% endif %}
 {% endif %}
