Replace translatable strings with keys
Replace translatable English strings in the source code with keys.
Also add the "trimmed" keyword to all blocktranslate
tags.

Fixes #114 (except change from "exercise" -> "assignment")

--- a/access/templates/access/_error_summary.html
+++ b/access/templates/access/_error_summary.html
@@ -3,8 +3,8 @@
 
 <div class="error-summary">
 	<div class="error-summary__text">
-		<h4>{% trans "Submission failed" %}</h4>
-		<p>{% trans "Check your answers before trying again:" %}</p>
+		<h4>{% trans "SUBMISSION_FAILED" %}</h4>
+		<p>{% trans "CHECK_ANSWERS_BEFORE_TRYING_AGAIN" %}</p>
 		<ul>
 		{% for field in result.form %}
 			{% if field.errors %}
