--- a/access/templates/access/accept_general_default.html
+++ b/access/templates/access/accept_general_default.html
@@ -14,7 +14,7 @@
 {% elif exercise.instructions_file %}
     {% include exercise.instructions_file %}
 {% else %}
-<h1>{% trans "Enter your submission" %}</h1>
+<h1>{% trans "ENTER_SUBMISSION" %}</h1>
 {% endif %}
 
 {% include 'access/personalized_content_default.html' %}
