--- a/access/templates/access/create_form_default.html
+++ b/access/templates/access/create_form_default.html
@@ -14,8 +14,7 @@
 		{% endif %}
 		<p>
 			{% blocktrans trimmed %}
-				The whole section within the black line is marked as being
-				incorrect, if one of the questions incorrect.
+				WHOLE_SECTION_WITHIN_LINE_MARKED_AS_INCORRECT
 			{% endblocktrans %}
 		</p>
 	</div>
