--- a/access/templates/access/exercise_config_error.html
+++ b/access/templates/access/exercise_config_error.html
@@ -3,7 +3,7 @@
 
 {% block exercise %}
 <div class="alert alert-danger">
-	<h3>{% trans "The exercise configuration has an error. Please, notify the course staff and provide the following message:" %}</h3>
+	<h3>{% trans "EXERCISE_CONFIGURATION_ERROR_NOTIFY_COURSE_STAFF_WITH_MESSAGE" %}</h3>
 <pre>{{ config_error }}</pre>
 </div>
 {% endblock %}
