--- a/access/templates/access/task_timeout.html
+++ b/access/templates/access/task_timeout.html
@@ -1,11 +1,9 @@
 {% load i18n %}
 <div id="feedback">
-    <h1>{% trans "Time out while grading" %}</h1>
+    <h1>{% trans "TIMEOUT_WHILE_GRADING" %}</h1>
     <p>
-        {% blocktrans %}
-        Ooops, the grading of your submission timed out!
-        Sorry for your inconvenience.
-        Please try again later or contact course support.
+        {% blocktrans trimmed %}
+            TIMEOUT_WHILE_GRADING_DESCRIPTION
         {% endblocktrans %}
     </p>
 </div>
