--- a/access/templates/access/accept_general_form.html
+++ b/access/templates/access/accept_general_form.html
@@ -25,8 +25,8 @@
 
 		{% if exercise.required_number_of_files %}
 			<p>
-			{% blocktrans with num_files=exercise.required_number_of_files %}
-				Submit only {{ num_files }} of the following files.
+			{% blocktrans trimmed with num_files=exercise.required_number_of_files %}
+				SUBMIT_ONLY_NUM_FILES_OF_FOLLOWING -- {{ num_files }}
 			{% endblocktrans %}
 			</p>
 		{% endif %}
@@ -49,7 +49,7 @@
 
 	{% if post_url or not result.accepted %}
 	<div class="form-group">
-		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary aplus-submit" />
+		<input type="submit" value="{% trans 'SUBMIT' %}" class="btn btn-primary aplus-submit" />
 	</div>
 	{% endif %}
 </form>
