--- a/access/templates/access/accept_git_form.html
+++ b/access/templates/access/accept_git_form.html
@@ -2,18 +2,18 @@
 <form method="post" action="{{ post_url }}">
 	<div class="form-group">
 		<label for="git_id">
-			<strong>{% trans "Enter your Git repository address for grading" %}</strong>
+			<strong>{% trans "GIT_ENTER_REPOSITORY_ADDRESS" %}</strong>
 		</label>
 		<input type="text" id="git_id" name="git" class="form-control" />
 		{% if not exercise.no_git_reminder %}
 		<p class="help-block">
-			{% trans "Did you remember git add - git commit - git push?" %}
+			{% trans "GIT_WORKFLOW_REMINDER" %}
 		</p>
 		{% endif %}
 	</div>
 	{% if post_url or not result.accepted %}
 	<div class="form-group">
-		<input type="submit" id="git_submit" value="{% trans 'Submit' %}" class="btn btn-primary aplus-submit" />
+		<input type="submit" id="git_submit" value="{% trans 'SUBMIT' %}" class="btn btn-primary aplus-submit" />
 	</div>
 	{% endif %}
 </form>
