--- a/access/templates/access/accept_git_user.html
+++ b/access/templates/access/accept_git_user.html
@@ -16,19 +16,19 @@
 	{% else %}
 	<div class="form-group">
 		<label for="user">
-            <strong>{% trans "Enter your user id for grading" %}</strong>
+            <strong>{% trans "GIT_ENTER_USER_ID" %}</strong>
         </label>
 		<input type="text" id="user" name="user" class="form-control" />
 	</div>
 	{% endif %}
     {% if not exercise.no_git_reminder %}
 	<p class="help-block">
-        {% trans "Did you remember git add - git commit - git push?" %}
+        {% trans "GIT_WORKFLOW_REMINDER" %}
     </p>
 	{% endif %}
     {% if post_url or not result.accepted %}
     <div class="form-group">
-        <input type="submit" class="btn btn-primary aplus-submit" value="{% trans 'Request grading of my repository' %}" />
+        <input type="submit" class="btn btn-primary aplus-submit" value="{% trans 'GIT_REQUEST_GRADING_OF_REPO' %}" />
     </div>
     {% endif %}
 </form>
