--- a/access/templates/access/accept_post_form.html
+++ b/access/templates/access/accept_post_form.html
@@ -19,7 +19,7 @@
 	{% endfor %}
 	{% if post_url or not result.accepted %}
 	<div class="form-group">
-		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary aplus-submit" />
+		<input type="submit" value="{% trans 'SUBMIT' %}" class="btn btn-primary aplus-submit" />
 	</div>
 	{% endif %}
 </form>
