--- a/access/templates/access/course.html
+++ b/access/templates/access/course.html
@@ -7,10 +7,10 @@
 <div class="page-header">
 	<h1>{{ course.name }}</h1>
 </div>
-<h3>{% trans "Service URLs for A+" %}</h3>
+<h3>{% trans "SERVICE_URLS_FOR_A+" %}</h3>
 <table class="table">
   <tr>
-    <td>{% trans "A+ configuration JSON" %}</td>
+    <td>{% trans "A+_CONFIGURATION_JSON" %}</td>
     <td>
       <a href="{{ plus_config_url }}">
         {{ plus_config_url }}
@@ -18,19 +18,19 @@
     </td>
   </tr>
   <tr>
-    <td>{% trans "Build/make output retrieval" %}</td>
+    <td>{% trans "BUILD/MAKE_OUTPUT_RETRIEVAL" %}</td>
     <td>
     {% if build_log_url %}
       <a href="{{ build_log_url }}">
         {{ build_log_url }}
       </a>
     {% else %}
-    <p>{% trans "Requires the gitmanager plugin" %}</p>
+    <p>{% trans "REQUIRES_GITMANAGER_PLUG-IN" %}</p>
     {% endif %}
     </td>
   </tr>
 </table>
-<h3>{% trans "Available exercises" %}</h3>
+<h3>{% trans "AVAILABLE_EXERCISES" %}</h3>
 <div class="list-group">
 	{% for exercise in exercises %}
 	<a href="{% url 'exercise' course.key exercise.key %}" class="list-group-item">
