--- a/access/templates/access/feedback_template_did_not_use_result_alert.html
+++ b/access/templates/access/feedback_template_did_not_use_result_alert.html
@@ -1,15 +1,6 @@
 {% load i18n %}
 <div class="alert alert-warning">
-    {% blocktrans %}
-    <p>
-        The feedback template did not access the <code>result</code> dict. This
-        means that the feedback shown below is likely inadequate or missing.
-        The template should access at least one of <code>points</code>,
-        <code>max_points</code>, <code>error</code> or <code>out</code>. Please
-        check the <code>feedback_template</code> specified in the exercise YAML.
-    </p><p>
-        If you are a student, please tell course staff what you were doing
-        before you got this message, and the content of this message.
-    </p>
+    {% blocktrans trimmed %}
+        WARNING_FEEDBACK_DID_NOT_ACCESS_RESULT
     {% endblocktrans %}
 </div>
