--- a/access/templates/access/ready.html
+++ b/access/templates/access/ready.html
@@ -3,16 +3,16 @@
 
 {% block body %}
 <div class="page-header">
-	<h1>{% trans "Grader ready" %}</h1>
+	<h1>{% trans "GRADER_READY" %}</h1>
 </div>
 <p>
 	{% if manager %}
 	<a href="{% url 'manager-repos' %}" class="btn btn-default btn-sm">
-		{% trans "Git manager" %}
+		{% trans "GIT_MANAGER" %}
 	</a>
 	{% endif %}
 </p>
-<h3>{% trans "Available courses" %}</h3>
+<h3>{% trans "AVAILABLE_COURSES" %}</h3>
 <div class="list-group">
 	{% for course in courses %}
 	<a href="{% url 'course' course.key %}" class="list-group-item">
