Add translations to texts of error pages
Add Finnish translations to texts on 404 and 500 error pages.

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,9 @@
 {% extends 'grader_frame.html' %}
+{% load i18n %}
 
 {% block body %}
-	<h1>404 Not found</h1>
+	<h1>404 {% trans "NOT_FOUND" %}</h1>
 	<p>
-		Ooops, we might have entered a typo!
-		Sorry for your inconvenience.
-		Please try again later or contact course support.
+		{% trans "NOT_FOUND_DESCRIPTION" %}
 	</p>
 {% endblock %}
