Add role alert to alert divs in HTML templates

--- a/access/templates/access/exercise_config_error.html
+++ b/access/templates/access/exercise_config_error.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block exercise %}
-<div class="alert alert-danger">
+<div class="alert alert-danger" role="alert">
 	<h3>{% trans "EXERCISE_CONFIGURATION_ERROR_NOTIFY_COURSE_STAFF_WITH_MESSAGE" %}</h3>
 <pre>{{ config_error }}</pre>
 </div>
