--- a/access/templates/access/course.html
+++ b/access/templates/access/course.html
@@ -4,6 +4,12 @@
 {% block title %}mooc-grader :: {{ course.name }}{% endblock %}
 
 {% block body %}
+{% if error %}
+	<div class="alert alert-danger" role="alert">
+		{{ error }}
+	</div>
+{% endif %}
+
 <div class="page-header">
 	<h1>{{ course.name }}</h1>
 </div>
