Replace harcoded login urls
Rather than hardcoding /login/, use the url template tag and reverse_lazy

Fixes #136

--- a/access/templates/access/login.html
+++ b/access/templates/access/login.html
@@ -17,7 +17,7 @@
         const data = new FormData(e.target);
 
         const xml = new XMLHttpRequest();
-        xml.open("POST", "/login");
+        xml.open("POST", "{% url 'login' %}");
         xml.setRequestHeader("Authorization", "Bearer " + data.get("token"))
         xml.onload = () => {
             console.log(xml);
