--- a/access/templates/access/exercise_head.html
+++ b/access/templates/access/exercise_head.html
@@ -15,8 +15,8 @@
 		<meta name="status" value="rejected" />
 		{% elif result.accepted %}
 		<meta name="status" value="accepted" />
-		{% if result.wait and result.queue < 3 and not exercise.never_wait %}
-		<meta name="wait" value="{{ result.queue }}" />
+		{% if not exercise.never_wait %}
+		<meta name="wait" value="1" />
 		{% endif %}
 		{% endif %}
 
