--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -10,8 +10,22 @@
 
 	{% if field.field.open_set %}
 		<!-- Beginning of all questions -->
-		<fieldset id="{{ field.field.open_set }}"{% if result.accepted and field.field.group_errors %} class="alert alert-default"{% endif %}>
+		<fieldset
+			id="{{ field.field.open_set }}"
+			{% if result.accepted and field.field.group_errors %}
+				class="alert alert-{% if field.field.group_name in result.error_groups %}danger{% else %}default{% endif %}"
+			{% endif %}
+		>
 		{% if field.field.set_title %}<legend>{{ field.field.set_title }}</legend>{% endif %}
+		{% if result.accepted and field.field.group_errors %}
+			{% if field.field.group_name in result.error_groups %}
+				<i class="quiz1-icon-incorrect" aria-hidden="true"></i>
+				<span class="feedback-text">{% translate "INCORRECT" %}</span>
+			{% else %}
+				<i class="quiz1-icon-correct" aria-hidden="true"></i>
+				<span class="feedback-text">{% translate "FEEDBACK_CORRECT_WITH_PUNCTUATION" %}</span>
+			{% endif %}
+		{% endif %}
 	{% endif %}
 
 		{% if field.field.type == "static" %}
