--- a/access/templates/access/graded_form_feedback.html
+++ b/access/templates/access/graded_form_feedback.html
@@ -10,13 +10,19 @@
 {% if not result.model_answer %}
 	<p class="question-feedback">
 		{% if field.answer_correct %}
-			<i class="quiz1-icon-correct" aria-hidden="true"></i>
-			<span class="feedback-text">{% trans "FEEDBACK_CORRECT_WITH_PUNCTUATION" %}</span>
+			{% if not field.group_errors %}
+				<i class="quiz1-icon-correct" aria-hidden="true"></i>
+				<span class="feedback-text">{% trans "FEEDBACK_CORRECT_WITH_PUNCTUATION" %}</span>
+			{% endif %}
 		{% else %}
-			<i class="quiz1-icon-incorrect" aria-hidden="true"></i>
+			{% if not field.group_errors %}
+				<i class="quiz1-icon-incorrect" aria-hidden="true"></i>
+			{% endif %}
 			<span class="feedback-text">
 				{% if not result.form.reveal_correct %}
-					{% trans "INCORRECT" %}
+					{% if not field.group_errors %}
+						{% trans "INCORRECT" %}
+					{% endif %}
 				{% else %}
 					{# if "reveal-model-at-max-submissions" is set to true, the correct answers are revealed #}
 					{% if field.type == "checkbox" or field.type == "radio" %}
