--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -38,7 +38,7 @@
 
 		{% if not field.field.row_label or field.field.open_table %}
 		<!-- Individual question heading (individual form-group) -->
-		<div class="question-area {{ field.field.html_class }} {% if field.errors %}has-error{% endif %}">
+		<div class="question-area {{ field.field.html_class }} {% if field.errors %}is-invalid{% endif %}">
 
 			{% if field.field.required %}<span class="required">*</span>{% endif %}
 
@@ -54,11 +54,11 @@
 			{% if result.accepted and not result.form.enrollment_exercise %}
 			<!-- Points badge -->
 				{% if not exercise.feedback or field.field.points > 0 %}
-				<span class="badge text-bg-{% if field.field.grade_points > 0 and field.field.grade_points < field.field.max_points %}warning{% elif field.field.name in result.error_fields %}danger{% else %}success{% endif %}">
+				<span class="badge rounded-pill text-bg-{% if field.field.grade_points > 0 and field.field.grade_points < field.field.max_points %}warning{% elif field.field.name in result.error_fields %}danger{% else %}success{% endif %}">
 					{{ field.field.grade_points }} / {{ field.field.max_points }}
 				</span>
 					{% if field.field.max_points == 0 %}
-					<span class="sr-only">
+					<span class="visually-hidden">
 					{% if field.field.name in result.error_fields %}
 						{% trans "INCORRECT" %}
 					{% else %}
@@ -69,7 +69,7 @@
 				{% endif %}
 			{% else %}
 				{% if exercise.max_points > 0 and not exercise.feedback or field.field.points > 0 %}
-				<span class="badge text-bg-secondary">
+				<span class="badge rounded-pill text-bg-secondary">
 				{% blocktrans trimmed count points=field.field.points %}
 					POINTS_SINGULAR -- {{ points }}
 				{% plural %}
