--- a/access/templates/access/accept_general_form.html
+++ b/access/templates/access/accept_general_form.html
@@ -48,7 +48,7 @@
 	{% endif %}
 
 	{% if post_url or not result.accepted %}
-	<div class="form-group">
+	<div class="form-group mt-3">
 		<input type="submit" value="{% trans 'SUBMIT' %}" class="btn btn-primary aplus-submit" />
 	</div>
 	{% endif %}
