--- a/access/templates/access/accept_post_form.html
+++ b/access/templates/access/accept_post_form.html
@@ -18,7 +18,7 @@
 	</div>
 	{% endfor %}
 	{% if post_url or not result.accepted %}
-	<div class="form-group">
+	<div class="form-group mt-3">
 		<input type="submit" value="{% trans 'SUBMIT' %}" class="btn btn-primary aplus-submit" />
 	</div>
 	{% endif %}
