Fix margins and bold text in exercise forms

--- a/access/templates/access/accept_files_default.html
+++ b/access/templates/access/accept_files_default.html
@@ -8,7 +8,7 @@
 <p>{% trans "SELECT_FILES_FOR_GRADING" %}</p>
 
 {% else %}
-<div class="instructions">
+<div class="instructions mb-3">
 {% if exercise.instructions %}
   {{ exercise.instructions|safe }}
 {% endif %}
