--- a/access/templates/access/accept_git_form.html
+++ b/access/templates/access/accept_git_form.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <form method="post" action="{{ post_url }}">
 	<div class="form-group">
-		<label for="git_id">
+		<label for="git_id" class="mb-1">
 			<strong>{% trans "GIT_ENTER_REPOSITORY_ADDRESS" %}</strong>
 		</label>
 		<input type="text" id="git_id" name="git" class="form-control" />
