--- a/access/templates/access/accept_git_user.html
+++ b/access/templates/access/accept_git_user.html
@@ -4,7 +4,7 @@
 {% block exercise %}
 {% if not result.error %}
 {% if exercise.instructions %}
-<div class="instructions">
+<div class="instructions mb-3">
   {{ exercise.instructions|safe }}
 </div>
 {% endif %}
