--- a/access/templates/access/create_form_default.html
+++ b/access/templates/access/create_form_default.html
@@ -23,7 +23,7 @@
 {% endif %}
 
 {% if exercise.instructions %}
-<div class="instructions">
+<div class="instructions mb-3">
 	{{ exercise.instructions|safe }}
 </div>
 {% endif %}
