--- a/access/templates/access/accept_files_form.html
+++ b/access/templates/access/accept_files_form.html
@@ -9,21 +9,23 @@
 		</p>
 	{% endif %}
 
-	{% for entry in exercise.files %}
-	<div class="form-group">
-		<label for="exercise-{{ unique_id }}-{{ entry.field }}">
-			<span class="bi-file-earmark-fill" aria-hidden="true"></span>
-			{{ entry.name }}
-		</label>
-		<input
-			type="file"
-			id="exercise-{{ unique_id }}-{{ entry.field }}"
-			name="{{ entry.field }}"
-			class="form-control"
-			{% if entry.required or entry.required == None %}required{% endif %}
-		/>
+	<div class="d-flex flex-column gap-2">
+		{% for entry in exercise.files %}
+		<div class="form-group">
+			<label for="exercise-{{ unique_id }}-{{ entry.field }}" class="fw-bold mb-1">
+				<span class="bi-file-earmark-fill" aria-hidden="true"></span>
+				{{ entry.name }}
+			</label>
+			<input
+				type="file"
+				id="exercise-{{ unique_id }}-{{ entry.field }}"
+				name="{{ entry.field }}"
+				class="form-control"
+				{% if entry.required or entry.required == None %}required{% endif %}
+			/>
+		</div>
+		{% endfor %}
 	</div>
-	{% endfor %}
 	{% if post_url or not result.accepted %}
 	<div class="form-group mt-3">
 		<input type="submit" value="{% trans 'SUBMIT' %}" class="btn btn-primary aplus-submit" />
