--- a/access/templates/access/accept_general_default.html
+++ b/access/templates/access/accept_general_default.html
@@ -5,7 +5,7 @@
 {% block exercise %}
 {% if not result.error %}
 {% if exercise.instructions %}
-<div class="instructions">
+<div class="instructions mb-3">
   {{ exercise.instructions|safe }}
 </div>
   {% if exercise.instructions_file %}
