--- a/access/templates/access/accept_post_default.html
+++ b/access/templates/access/accept_post_default.html
@@ -3,7 +3,7 @@
 
 {% block exercise %}
 {% if exercise.instructions %}
-<div class="instructions">
+<div class="instructions mb-3">
   {{ exercise.instructions|safe }}
 </div>
   {% if exercise.instructions_file %}
